microservices/minikube/openshift-route-crd.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-route
spec:
  host: example.com
  to:
    kind: Service
    name: my-service
